--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
 body {
-  
-  /* background-image: url('./assets/background.png'); */
   background-size: auto 100%;
   background-position: center center;
   background-repeat: no-repeat;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-style: normal;
-  color: #111111;
+  color: #ffffff;
   width: 100%;
   height: 100vh;
   margin: 0;
