--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,13 +3,46 @@
     width: 100%;
    
 }
-.arrow{
+.button {
+    width: 50px;
+    height: 50px;
+    background-color: #ffffff;
+    fill: transparent;
+    box-shadow:  0 0 5px #00baff,
+    0 0 10px #00baff,
+    0 0 20px #00baff,
+    0 0 40px #00baff,
+    0 0 80px #00baff;
+  transition:
+    color 0.3s,
+    text-shadow 0.3s;
+    cursor: pointer;
+    display: flex;
+}
+.button:hover,
+.button:focus {
+    color: #00baff;
+    text-shadow:
+    0 0 5px #00baff,
+    0 0 10px #00baff,
+    0 0 20px #00baff,
+    0 0 40px #00baff,
+    0 0 80px #00baff;
+}
+.menu{
     width: 50px;
     height: 50px;
     stroke: #ffffff;
-    filter: drop-shadow(0 0 5px #00baff)
-                    drop-shadow(0 0 10px #00baff)
-                    drop-shadow(0 0 20px #00baff)
-                    drop-shadow(0 0 40px #00baff)
-                    drop-shadow(0 0 80px #00baff);
+    fill: transparent;
+    transform: translate(0, 0);
+}
+.dialog {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    background-color: #00baff;
+    opacity: 0.8;
 }
