--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,9 +1,10 @@
 .footer {
 display: flex;
-justify-content: space-between;
+justify-content: center;
 align-items: center;
+
  
-  gap: 20px;
+  gap: 80px;
 padding: 30px 50px;
 width: 100%;
 height: 140px;
@@ -24,6 +25,17 @@ text-shadow:
     gap: 30px;
     list-style: none;
     margin: 30px 0;
+}
+.title {
+    color: #ffffff;
+    text-shadow:
+    0 0 5px #00baff,
+    0 0 10px #00baff,
+    0 0 20px #00baff,
+    0 0 40px #00baff,
+    0 0 80px #00baff;
+    margin-top: 50px;
+    font-size: 20px;
 }
 
 .contacts {
