--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,7 +3,10 @@ display: flex;
 justify-content: center;
 align-items: center;
 font-size: 30px;
- 
+ position: relative;
+ bottom: 0;
+ left: 0;
+ z-index: 12;
   gap: 80px;
 padding: 30px 50px;
 width: 100%;
