--- a/src/pages/CamperClubPage/CamperClubPage.module.css
+++ b/src/pages/CamperClubPage/CamperClubPage.module.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: auto;
     padding: 50px;
+    position: relative;
+    z-index: 12;
 }
 .title {
     text-align: center;
