--- a/src/components/Background/Background.module.css
+++ b/src/components/Background/Background.module.css
@@ -1,18 +1,18 @@
 
 @keyframes glitter {
   0% {
-    background-position: 0% 50%;
+    background-position: 0% 0%;
   }
   50% {
     background-position: 100% 50%;
   }
   100% {
-    background-position: 0% 50%;
+    background-position: 0% 100%;
   }
 }
 
-.background {
-  background: linear-gradient(270deg, #ff9a9e, #fad0c4, #fbc2eb, #a6c1ee, #e0d1ff);
+.container {
+  background: linear-gradient(to bottom, #161862, #0842b6, #38305e, #1f294c, #0d1150);
   background-size: 400% 400%;
   animation: glitter 15s ease infinite;
   height: 100vh;
