--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
+
+@keyframes glitter {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 100%;
+  }
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-  background-size: auto 100%;
+  /* background-size: auto 100%; */
   background-position: center center;
   background-repeat: no-repeat;
   font-family: 'Roboto', sans-serif;
@@ -9,8 +26,39 @@ body {
   width: 100%;
   height: 100vh;
   margin: 0;
-  
+  background: linear-gradient(to bottom, #13013a, #141366, #051f3d, #010847);
+  background-size: 400% 400%;
+  animation: shimmer 15s ease infinite;
+  overflow: auto;
+::-webkit-scrollbar {
+        width: 10px;
+    }
+    ::-webkit-scrollbar-track {
+        background: transparent;
+    }
+    ::-webkit-scrollbar-thumb {
+        background: transparent;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+        background: transparent;
+    }
 }
+html, body {
+    scroll-behavior: smooth;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 100%;
+  }
+}
+
 h1,
 h2,
 h3,
@@ -36,13 +84,7 @@ button {
   cursor: pointer;
 }
 
-html {
-text-size-adjust: text-size-adjust;
--webkit-text-size-adjust: text-size-adjust;
-}
-@media screen and (max-width: 768px) {
-  
-  body {
-    font-size: 14px;
-  }
-}
+
+
+
+
