--- a/src/pages/CamperClubPage/CamperClubPage.module.css
+++ b/src/pages/CamperClubPage/CamperClubPage.module.css
@@ -4,6 +4,12 @@
     padding: 50px;
     position: relative;
     z-index: 12;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    
 }
 .title {
     text-align: center;
@@ -132,4 +138,9 @@
     width: 300px;
     height: auto;
     border-radius: 8px;
+}
+.img {
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
 }
