--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
-    padding: 30px 50px;
+    padding: 50px 80px;
     width: 100%;
-   height: 140px;
+   height: 240px;
 
 }
 .button {
@@ -17,12 +17,15 @@
     0 0 40px #00baff,
     0 0 80px #00baff;
     border: none;
+    border-radius: 8px;
   transition:
     color 0.3s,
     text-shadow 0.3s;
     cursor: pointer;
     display: flex;
     margin-top: 30px;
+    margin-left: auto;
+    margin-right: 0px;
 }
 .button:hover,
 .button:focus {
@@ -64,7 +67,10 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 140px;
+    height: 240px;
     z-index: 5;
     opacity: 0.8;
 }
+
+
+
