--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -3,11 +3,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 140px;
-    display: block;
+    height: 240px;
+    display: flex;
     align-items: center;
     justify-content: center;
-    padding: 30px;
+    padding: 50px 80px;
     z-index: 4;
     border-radius: 8px;
     box-shadow:  0 0 5px #00baff,
