--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   width: 100%;
   height: 100vh;
   margin: 0;
-  background: linear-gradient(to bottom, #13013a, #141366, #051f3d, #010847);
+  background: linear-gradient(to bottom, #13013a, #030230, #010a15, #010847);
   background-size: 400% 400%;
   animation: shimmer 15s ease infinite;
 
