--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -1,23 +1,28 @@
-.modal {
-    position: absolute;
-    top: 0;
-    left: 0;
+.wrapper {
     width: 100%;
-    height: 240px;
-    display: flex;
+    height: auto;
+    padding: 50px;
+    position: relative;
+    z-index: 12;
     align-items: center;
     justify-content: center;
-    padding: 50px 80px;
-    z-index: 4;
-    border-radius: 8px;
-    box-shadow:  0 0 5px #00baff,
+    display: flex;
+    flex-direction: column;
+}
+.title {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 50px;
+  text-shadow:
+    0 0 5px #00baff,
     0 0 10px #00baff,
     0 0 20px #00baff,
     0 0 40px #00baff,
     0 0 80px #00baff;
-    opacity: 1;
 }
-.headerItem {
+
+.item {
    padding: 8px 16px;
   color: #ffffff; /* White text color */
   text-shadow:
@@ -29,14 +34,14 @@
   transition:
     color 0.3s,
     text-shadow 0.3s;
-    font-size: 25px;
+    font-size: 55px;
 font-weight: 700;
+position: relative;
+z-index: 12;
 }
-.active {
-  color: #00baff;
-}
-  .headerItem:hover,
-  .headerItem:focus {
+
+  .item:hover,
+  .item:focus {
     color: #00baff; /* Blue text color on hover/focus */
     text-shadow:
       0 0 5px #00baff,
@@ -45,9 +50,11 @@ font-weight: 700;
       0 0 40px #00baff,
       0 0 80px #00baff;
   }
-.headerList {
+.list {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
+    gap: 50px;
     margin-top: 50px;
 }
