--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -6,7 +6,7 @@
 	width: 100%;
 	height: 100%;
 	z-index: 0;
-	overflow: auto;
+	overflow: hidden;
 	background: -webkit-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
 	background: -moz-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
 	background: -ms-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
