--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,19 @@ body {
   width: 100%;
   height: 100vh;
   margin: 0;
+  overflow: auto;
+}
+body::-webkit-scrollbar {
+    width: 0px;
+}
+body::-webkit-scrollbar-track {
+    background: transparent;
+}
+body::-webkit-scrollbar-thumb {
+    background: transparent;
+}
+body::-webkit-scrollbar-thumb:hover {
+    background: transparent;
 }
 
 @keyframes gradientAnimation {
