--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -58,3 +58,46 @@ z-index: 12;
     gap: 50px;
     margin-top: 50px;
 }
+.projectItem {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 30px;
+}
+.project {
+  fill: #ffffff;
+  transition: fill 0.3s;
+  width: 50px;
+  height: 50px;
+  filter: drop-shadow(0 0 5px #00baff)
+          drop-shadow(0 0 10px #00baff)
+          drop-shadow(0 0 20px #00baff)
+          drop-shadow(0 0 40px #00baff)
+          drop-shadow(0 0 80px #00baff);
+}
+
+.projectItem:hover .project {
+  animation: neonRainbow 1.5s infinite alternate;
+}
+
+@keyframes neonRainbow {
+  0% {
+    box-shadow: 0 0 5px #ff0099, 0 0 10px #ff0099, 0 0 15px #ff0099, 0 0 20px #ff0099, 0 0 25px #ff0099;
+  }
+  20% {
+    box-shadow: 0 0 5px #ff0099, 0 0 10px #ff0099, 0 0 15px #ff0099, 0 0 20px #ff0099, 0 0 25px #ff0099;
+  }
+  40% {
+    box-shadow: 0 0 5px #ff6600, 0 0 10px #ff6600, 0 0 15px #ff6600, 0 0 20px #ff6600, 0 0 25px #ff6600;
+  }
+  60% {
+    box-shadow: 0 0 5px #ffff33, 0 0 10px #ffff33, 0 0 15px #ffff33, 0 0 20px #ffff33, 0 0 25px #ffff33;
+  }
+  80% {
+    box-shadow: 0 0 5px #33ff33, 0 0 10px #33ff33, 0 0 15px #33ff33, 0 0 20px #33ff33, 0 0 25px #33ff33;
+  }
+  100% {
+    box-shadow: 0 0 5px #3399ff, 0 0 10px #3399ff, 0 0 15px #3399ff, 0 0 20px #3399ff, 0 0 25px #3399ff;
+  }
+}
