--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -40,16 +40,7 @@ position: relative;
 z-index: 12;
 }
 
-  .item:hover,
-  .item:focus {
-    color: #00baff; /* Blue text color on hover/focus */
-    text-shadow:
-      0 0 5px #00baff,
-      0 0 10px #00baff,
-      0 0 20px #00baff,
-      0 0 40px #00baff,
-      0 0 80px #00baff;
-  }
+  
 .list {
     display: flex;
     justify-content: center;
@@ -64,6 +55,21 @@ z-index: 12;
     justify-content: center;
     text-align: center;
     gap: 30px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 1px solid #ffffff;
+    cursor: pointer;
+    box-shadow: 0 0 5px #00baff,
+    0 0 10px #00baff,
+    0 0 20px #00baff,
+    0 0 40px #00baff,
+    0 0 80px #00baff; 
+    color: #ffffff;
+    font-size: 25px;
+    font-weight: 600;
+    transition: all 0.3s;
+    width: 800px;
+    height: 100px;
 }
 .project {
   fill: #ffffff;
@@ -77,7 +83,7 @@ z-index: 12;
           drop-shadow(0 0 80px #00baff);
 }
 
-.projectItem:hover .project {
+.projectItem:hover  {
   animation: neonRainbow 1.5s infinite alternate;
 }
 
