--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,16 +4,27 @@
    height: 240px;
 position: relative;
 z-index: 12;
+
+}
+.icon {
+    width: 50px;
+    height: 50px;
+    fill: #ffffff;
+    filter: drop-shadow(0 0 5px #00baff)
+          drop-shadow(0 0 10px #00baff)
+          drop-shadow(0 0 20px #00baff)
+          drop-shadow(0 0 40px #00baff)
+          drop-shadow(0 0 80px #00baff);
 }
 .headerItem {
    padding: 8px 16px;
-  color: #ffffff; /* White text color */
+   color: #ffffff; 
   text-shadow:
     0 0 5px #00baff,
     0 0 10px #00baff,
     0 0 20px #00baff,
     0 0 40px #00baff,
-    0 0 80px #00baff;
+    0 0 80px #00baff; 
   transition:
     color 0.3s,
     text-shadow 0.3s;
