--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,9 @@ body {
   background: linear-gradient(45deg, #0d0d3c, #1e1e54, #1c2e6d, #002b80);
   background-size: 400% 400%;
   animation: gradientAnimation 15s ease infinite;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Kalam', cursive;
+color: #ffffff; 
   font-weight: 400;
-  font-style: normal;
-  color: #ffffff;
   width: 100%;
   height: 100vh;
   margin: 0;
