--- a/src/pages/CamperClubPage/CamperClubPage.module.css
+++ b/src/pages/CamperClubPage/CamperClubPage.module.css
@@ -210,6 +210,10 @@
     100% { background-position: 0 0; }
 }
 .back {
+  position: absolute;
+  bottom: 0;
+  right: 5%;
+  z-index: 3;
  padding: 20px 30px;
   margin: 30px;
   border-radius: 50px;
