config about me

--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,11 +1,8 @@
 .container {
-  position: fixed;
-	top: 0px;
-	left: 0px;
- padding: 50px 100px;
+  padding: 0 50px;
+    margin: 0 auto;
 	width: 100%;
 	height: 100%;
-	z-index: 0;
 	overflow: hidden;
 	background: -webkit-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
 	background: -moz-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
@@ -17,7 +14,7 @@
 	-ms-animation: fadein 1s;
 	animation: fadein 1s;
 
-	
+
 }
 
 .container::-webkit-scrollbar {
