--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,15 +1,12 @@
 .footer {
 display: flex;
+padding: 50px;
 justify-content: center;
 align-items: center;
 font-size: 30px;
  position: relative;
- bottom: 0;
- left: 0;
  z-index: 12;
   gap: 80px;
-padding: 50px 80px;
-width: 100%;
 height: 240px;
 text-shadow:
     0 0 5px #00baff,
