--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,14 +1,16 @@
 .header {
-    padding: 50px 80px;
-    width: 100%;
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;;
+    padding: 50px;
    height: 240px;
 position: relative;
 z-index: 12;
 
 }
 .icon {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     fill: #ffffff;
     filter: drop-shadow(0 0 5px #00baff)
           drop-shadow(0 0 10px #00baff)
@@ -17,8 +19,10 @@ z-index: 12;
           drop-shadow(0 0 80px #00baff);
 }
 .headerItem {
-   padding: 8px 16px;
-   color: #ffffff; 
+   padding: 18px 26px;
+   border-radius: 50%;
+  display: flex; 
+  align-items: center;
   text-shadow:
     0 0 5px #00baff,
     0 0 10px #00baff,
@@ -31,22 +35,40 @@ z-index: 12;
     font-size: 25px;
 font-weight: 700;
 }
-.active {
-  color: #00baff;
+.active .icon {
+ width: 90px;
+    height: 90px;
 }
-  .headerItem:hover,
-  .headerItem:focus {
-    color: #00baff; /* Blue text color on hover/focus */
-    text-shadow:
-      0 0 5px #00baff,
-      0 0 10px #00baff,
-      0 0 20px #00baff,
-      0 0 40px #00baff,
-      0 0 80px #00baff;
-  }
+  
 .headerList {
     display: flex;
     justify-content: flex-end;
+    gap: 50px;
     align-items: center;
     margin-top: 50px;
+}
+
+.headerItem:hover  {
+  animation: neonRainbow 1.5s infinite alternate;
+}
+
+@keyframes neonRainbow {
+  0% {
+    box-shadow: 0 0 5px #ff0099, 0 0 10px #ff0099, 0 0 15px #ff0099, 0 0 20px #ff0099, 0 0 25px #ff0099;
+  }
+  20% {
+    box-shadow: 0 0 5px #ff0099, 0 0 10px #ff0099, 0 0 15px #ff0099, 0 0 20px #ff0099, 0 0 25px #ff0099;
+  }
+  40% {
+    box-shadow: 0 0 5px #ff6600, 0 0 10px #ff6600, 0 0 15px #ff6600, 0 0 20px #ff6600, 0 0 25px #ff6600;
+  }
+  60% {
+    box-shadow: 0 0 5px #ffff33, 0 0 10px #ffff33, 0 0 15px #ffff33, 0 0 20px #ffff33, 0 0 25px #ffff33;
+  }
+  80% {
+    box-shadow: 0 0 5px #33ff33, 0 0 10px #33ff33, 0 0 15px #33ff33, 0 0 20px #33ff33, 0 0 25px #33ff33;
+  }
+  100% {
+    box-shadow: 0 0 5px #3399ff, 0 0 10px #3399ff, 0 0 15px #3399ff, 0 0 20px #3399ff, 0 0 25px #3399ff;
+  }
 }
