--- a/src/index.css
+++ b/src/index.css
@@ -11,19 +11,17 @@
   }
 }
 
-* {
-  box-sizing: border-box;
-}
+
 
 body {
-  background: linear-gradient(45deg, #0d0d3c, #1e1e54, #1c2e6d, #002b80);
+  background: linear-gradient(to top, #0d0d3c, #1e1e54, #1c2e6d, #002b80);
   background-size: 400% 400%;
   animation: gradientAnimation 15s ease infinite;
   font-family: 'Kalam', cursive;
 color: #ffffff; 
   font-weight: 400;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   margin: 0;
   overflow: auto;
 }
