--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -1,14 +1,16 @@
 .wrapper {
     padding: 50px;
     position: relative;
-    z-index: 12;
+    z-index: 5;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
 }
 .text {
     text-align: center;
+    
     font-size: 40px;
     font-weight: 400;
     margin-bottom: 50px;
@@ -19,6 +21,24 @@
     0 0 20px #00baff,
     0 0 40px #00baff,
     0 0 80px #00baff;
+}
+.foto {
+    width: 30%;
+    height: auto;
+    border-radius: 20px;
+    box-shadow: 0 0 5px #00baff,
+    0 0 10px #00baff,
+    0 0 20px #00baff,
+    0 0 40px #00baff,
+    0 0 80px #00baff;
+}
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    padding: 30px;
+    margin-bottom: 50px;
 }
 .title {
     text-align: center;
@@ -42,6 +62,7 @@
     list-style: none;
     margin: 30px 0;
    padding: 0 80px;
+   margin-bottom: 80px;
    
 }
 .item {
@@ -70,4 +91,15 @@
     width: 100px;
     height: 100px;
     
+}
+.iframe {
+    width: 640px;
+    height: 800px;
+    border-radius: 20px;
+    box-shadow:
+    0 0 5px #00baff,
+    0 0 10px #00baff,
+    0 0 20px #00baff,
+    0 0 40px #00baff,
+    0 0 80px #00baff;
 }
