--- a/src/pages/WelcomePage/WelcomePage.module.css
+++ b/src/pages/WelcomePage/WelcomePage.module.css
@@ -1,7 +1,9 @@
+@media screen and (min-width: 320px) {
+	
 
   .wrapper{
 	width: 100%;
-	height: 700px;
+	height: 1000px;
 	padding: 50px;
   }
 	.container {
@@ -361,5 +363,12 @@ transform: translate(-50%,50%);
     text-shadow: 0 0 5px #00baff, 0 0 10px #00baff, 0 0 20px #00baff, 0 0 40px #00baff, 0 0 80px #00baff;
   }
 }
+}
 
-
+@media screen and (min-width: 680px) {
+	.wrapper{
+	width: 100%;
+	height: 700px;
+	padding: 50px;
+  }
+}
