--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -14,6 +14,7 @@
     font-size: 40px;
     font-weight: 600;
     margin-bottom: 50px;
+    color: #ffffff;
   text-shadow:
     0 0 5px #00baff,
     0 0 10px #00baff,
