--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -1,5 +1,4 @@
 .wrapper {
-    width: 100%;
     height: auto;
     padding: 50px;
     position: relative;
@@ -13,7 +12,7 @@
     text-align: center;
     font-size: 40px;
     font-weight: 600;
-    margin-bottom: 50px;
+    padding: 50px;
     color: #ffffff;
   text-shadow:
     0 0 5px #00baff,
@@ -48,7 +47,7 @@ z-index: 12;
     flex-direction: column;
     align-items: center;
     gap: 50px;
-    margin-top: 50px;
+    margin: 50px auto;
 }
 .projectItem {
     display: flex;
