--- a/src/pages/WelcomePage/WelcomePage.module.css
+++ b/src/pages/WelcomePage/WelcomePage.module.css
@@ -15,7 +15,7 @@
 	z-index: 0;
 	}
 
-content {
+.content {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -26,7 +26,7 @@ content {
 .container h2 {
 	position: absolute;
   left: 0;
-	top: 40%;
+	top: 50%;
 	line-height: 100px;
 	height: 90px;
 	margin-top: -50px;
@@ -147,7 +147,7 @@ transform: translate(-50%,50%);
   border-radius: 50%;
 	position: absolute;
   left: 50%;
-  top: 60%;
+  top: 70%;
   margin: -50px 0 0 -75px;
 	text-align: center;
 	line-height: 100px;
