--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -23,7 +23,7 @@
     0 0 80px #00baff;
 }
 .foto {
-    width: 30%;
+    width: 500px;
     height: auto;
     border-radius: 20px;
     box-shadow: 0 0 5px #00baff,
@@ -92,10 +92,30 @@
     height: 100px;
     
 }
-.iframe {
-    width: 640px;
-    height: 800px;
+
+.docBox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 150px;
+    padding: 30px;
+    margin-bottom: 50px;
+    width: auto;
+}
+.education {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    list-style: none;
+   
+}
+.cv {
+    width: 500px;
+    height: auto;
     border-radius: 20px;
+    cursor: pointer;
     box-shadow:
     0 0 5px #00baff,
     0 0 10px #00baff,
@@ -103,4 +123,3 @@
     0 0 40px #00baff,
     0 0 80px #00baff;
 }
-
