--- a/src/pages/CamperClubPage/CamperClubPage.module.css
+++ b/src/pages/CamperClubPage/CamperClubPage.module.css
@@ -1,5 +1,4 @@
 .wrapper {
-    width: 100%;
     height: auto;
     padding: 50px;
     position: relative;
@@ -15,7 +14,7 @@
     text-align: center;
     font-size: 40px;
     font-weight: 600;
-    margin-bottom: 50px;
+    margin-bottom: 70px;
   text-shadow:
     0 0 5px #00baff,
     0 0 10px #00baff,
@@ -28,7 +27,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 150px;
     margin: 50px 0px;
 }
 .imgCamper {
@@ -117,7 +116,7 @@
     margin-bottom: 20px;
   }
   .description {
-    margin-bottom: 25px;
+    margin-bottom: 35px;
     padding: 0 50px;
     font-size: 25px;
     text-shadow:
@@ -147,20 +146,50 @@
   .tool {
     font-size: 25px;
   }
+  .imgWater {
+    margin-bottom: 50px;
+    width: 700px;
+    height: auto;
+    border-radius: 8px;
+    box-shadow:
+    0 0 5px #00baff,
+    0 0 10px #00baff,
+    0 0 20px #00baff,
+    0 0 40px #00baff,
+    0 0 80px #00baff;
+  }
   .phoneBook {
     width: 700px;
     height: auto;
     border-radius: 8px;
+    box-shadow:
+    0 0 5px #00baff,
+    0 0 10px #00baff,
+    0 0 20px #00baff,
+    0 0 40px #00baff,
+    0 0 80px #00baff;
 }
 .imgPhone {
     width: 300px;
     height: auto;
     border-radius: 8px;
+    box-shadow:
+    0 0 5px #00baff,
+    0 0 10px #00baff,
+    0 0 20px #00baff,
+    0 0 40px #00baff,
+    0 0 80px #00baff;
 }
 .img {
   align-items: center;
   justify-content: center;
   border-radius: 8px;
+  box-shadow:
+    0 0 5px #00baff,
+    0 0 10px #00baff,
+    0 0 20px #00baff,
+    0 0 40px #00baff,
+    0 0 80px #00baff;
 }
 
 .button:before {
@@ -210,10 +239,7 @@
     100% { background-position: 0 0; }
 }
 .back {
-  position: absolute;
-  bottom: 0;
-  right: 5%;
-  z-index: 3;
+  
  padding: 20px 30px;
   margin: 30px;
   border-radius: 50px;
