--- a/src/pages/WelcomePage/WelcomePage.module.css
+++ b/src/pages/WelcomePage/WelcomePage.module.css
@@ -139,15 +139,25 @@ text-shadow: 0px 0px 1px #fff;
 transform: translate(-50%,50%);
 }
 .circle {
-  border-radius: 50%;
+	padding: 20px 30px;
+  transition: 0.5s;
+  color: #ffffff;
+  text-shadow:
+    0 0 5px #00baff,
+    0 0 10px #00baff,
+    0 0 20px #00baff,
+    0 0 40px #00baff,
+    0 0 80px #00baff;
+ cursor: pointer;
+  border-radius: 50px;
 	position: absolute;
   left: 50%;
   top: 70%;
   margin: -50px 0 0 -75px;
 	text-align: center;
 	line-height: 100px;
-	width: 100px;
-	height: 100px;
+	width: auto;
+	height: auto;
 	font-size: 25px;
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
