--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -4,7 +4,11 @@
   z-index: 0;
     margin: 0 auto;
 	overflow: hidden;
-background-size: 400% 400%;
+    max-width: 1440px;
+    height: auto;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+
+    animation: fadein 0.5s ease-in;
 }
 
 .container::-webkit-scrollbar {
