--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,43 +1,42 @@
 .header {
     align-items: center;
     justify-content: flex-end;
-    display: flex;;
+    display: flex;
     padding: 50px;
-   height: 240px;
-position: relative;
-z-index: 12;
+    max-width: 1440px;
+   height: 140px;
+   box-shadow: 
+    0 0 5px rgba(0, 0, 0, 0.1),
+    0 0 10px rgba(0, 0, 0, 0.1),
+    0 0 20px rgba(0, 0, 0, 0.1),
+    0 0 40px rgba(0, 0, 0, 0.1),
+    0 0 80px rgba(0, 0, 0, 0.1);
+}
 
-}
-.icon {
-    width: 60px;
-    height: 60px;
-    fill: #ffffff;
-    filter: drop-shadow(0 0 5px #00baff)
-          drop-shadow(0 0 10px #00baff)
-          drop-shadow(0 0 20px #00baff)
-          drop-shadow(0 0 40px #00baff)
-          drop-shadow(0 0 80px #00baff);
-}
 .headerItem {
    padding: 26px;
    border-radius: 50%;
   display: flex; 
+  color: #ffffff;
   align-items: center;
-  text-shadow:
-    0 0 5px #00baff,
-    0 0 10px #00baff,
-    0 0 20px #00baff,
-    0 0 40px #00baff,
-    0 0 80px #00baff; 
-  transition:
-    color 0.3s,
-    text-shadow 0.3s;
+  justify-content: center;
+  cursor: pointer;
     font-size: 25px;
 font-weight: 700;
+transform: translateY(20px);
+  animation: fadeInUp 0.5s forwards;
 }
-.active .icon {
- width: 100px;
-    height: 100px;
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.active  {
+    font-size: 35px;
+    
+    transform: scale(1.2);
     transition: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
   
@@ -47,29 +46,13 @@ font-weight: 700;
     gap: 50px;
     align-items: center;
     margin-top: 50px;
+    border-radius: 10px;
+    padding: 10px 20px;
+    box-shadow: 
+    0 0 5px rgba(0, 0, 0, 0.1),
+    0 0 10px rgba(0, 0, 0, 0.1),
+    0 0 20px rgba(0, 0, 0, 0.1),
+    0 0 40px rgba(0, 0, 0, 0.1),
+    0 0 80px rgba(0, 0, 0, 0.1);
 }
 
-.headerItem:hover  {
-  animation: neonRainbow 1.5s infinite alternate;
-}
-
-@keyframes neonRainbow {
-  0% {
-    box-shadow: 0 0 5px #ff0099, 0 0 10px #ff0099, 0 0 15px #ff0099, 0 0 20px #ff0099, 0 0 25px #ff0099;
-  }
-  20% {
-    box-shadow: 0 0 5px #ff0099, 0 0 10px #ff0099, 0 0 15px #ff0099, 0 0 20px #ff0099, 0 0 25px #ff0099;
-  }
-  40% {
-    box-shadow: 0 0 5px #ff6600, 0 0 10px #ff6600, 0 0 15px #ff6600, 0 0 20px #ff6600, 0 0 25px #ff6600;
-  }
-  60% {
-    box-shadow: 0 0 5px #ffff33, 0 0 10px #ffff33, 0 0 15px #ffff33, 0 0 20px #ffff33, 0 0 25px #ffff33;
-  }
-  80% {
-    box-shadow: 0 0 5px #33ff33, 0 0 10px #33ff33, 0 0 15px #33ff33, 0 0 20px #33ff33, 0 0 25px #33ff33;
-  }
-  100% {
-    box-shadow: 0 0 5px #3399ff, 0 0 10px #3399ff, 0 0 15px #3399ff, 0 0 20px #3399ff, 0 0 25px #3399ff;
-  }
-}
