--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,9 @@
 
 
 body {
-  background: 
-        radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5) 35%, rgba(0, 0, 0, 0.9)),
-        linear-gradient(to top, #0b0b2e, #22225f, #192262, #001966);
-  background-size: 100% 100%;
-  animation: gradientAnimation 15s ease infinite;
+ background: linear-gradient(45deg, #501970, #4c398b, #274ea2, #039f51);
+            background-size: 300% 300%;
+            animation: gradientAnimation 10s ease infinite;
   font-family: 'Kalam', cursive;
 color: #ffffff; 
   font-weight: 400;
