--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -1,50 +1,93 @@
 .wrapper {
     height: auto;
     padding: 50px;
-    position: relative;
-    z-index: 12;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
+	 box-shadow: 
+    0 0 5px rgba(0, 0, 0, 0.1),
+    0 0 10px rgba(0, 0, 0, 0.1),
+    0 0 20px rgba(0, 0, 0, 0.1),
+    0 0 40px rgba(0, 0, 0, 0.1),
+    0 0 80px rgba(0, 0, 0, 0.1);
 }
-.title {
-    text-align: center;
-    font-size: 40px;
+
+ h2.fifthFrame {
+	-webkit-animation: none;
+	-moz-animation: none;
+	-ms-animation: none;
+	animation: none;
+	color: transparent;
+text-shadow: 0px 0px 1px #fff;
+font-size: 40px;
     font-weight: 600;
-    padding: 50px;
-    color: #ffffff;
-  text-shadow:
-    0 0 5px #00baff,
-    0 0 10px #00baff,
-    0 0 20px #00baff,
-    0 0 40px #00baff,
-    0 0 80px #00baff;
+    margin-bottom: 100px;
+	margin-top: 100px;
+}
+ h2.fifthFrame span {
+	-webkit-animation: blurFadeIn 3s ease-in 1s backwards;
+	-moz-animation: blurFadeIn 1s ease-in 1s backwards;
+	-ms-animation: blurFadeIn 3s ease-in 1s backwards;
+	animation: blurFadeIn 3s ease-in 1s backwards;
+	color: transparent;
+	text-shadow: 0px 0px 1px #fff;
+}
+h2.fifthFrame span:nth-child(2) {
+	-webkit-animation-delay: 2s;
+	-moz-animation-delay: 2s;
+	-ms-animation-delay: 2s;
+	animation-delay: 2s;
+  
+}
+h2.fifthFrame span:nth-child(3) {
+	-webkit-animation-delay: 3s;
+	-moz-animation-delay: 3s;
+	-ms-animation-delay: 3s;
+	animation-delay: 3s;
+}
+h2.fifthFrame span:nth-child(4) {
+	-webkit-animation-delay: 4s;
+	-moz-animation-delay: 4s;
+	-ms-animation-delay: 4s;
+	animation-delay: 4s;
 }
 
 .item {
-   padding: 8px 16px;
-  color: #ffffff; /* White text color */
-  text-shadow:
-    0 0 5px #00baff,
-    0 0 10px #00baff,
-    0 0 20px #00baff,
-    0 0 40px #00baff,
-    0 0 80px #00baff;
-  transition:
-    color 0.3s,
-    text-shadow 0.3s;
-    font-size: 55px;
-font-weight: 700;
-position: relative;
-z-index: 12;
+   background-color: transparent;
+   font-family: 'Kalam', cursive;
+   box-shadow: 
+    0 0 5px rgba(0, 0, 0, 0.1),
+    0 0 10px rgba(0, 0, 0, 0.1),
+    0 0 20px rgba(0, 0, 0, 0.1),
+    0 0 40px rgba(0, 0, 0, 0.1),
+    0 0 80px rgba(0, 0, 0, 0.1);
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 1px solid #ffffff;
+    cursor: pointer; 
+    color: #ffffff;
+    font-size: 25px;
+    font-weight: 500;
+    transition: all 0.3s;
+    width: auto;
+    height: auto;
+    -webkit-animation: fadeInRotate 1s linear 6s backwards;
+	-moz-animation: fadeInRotate 1s linear 6s backwards;
+	-ms-animation: fadeInRotate 1s linear 6s backwards;
+	animation: fadeInRotate 1s linear 6s backwards;
+	-webkit-transform: scale(1) rotate(0deg);
+	-moz-transform: scale(1) rotate(0deg);
+	-o-transform: scale(1) rotate(0deg);
+	-ms-transform: scale(1) rotate(0deg);
+	transform: scale(1) rotate(0deg);
 }
 
   
 .list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
     gap: 50px;
     margin: 50px auto;
@@ -54,38 +97,240 @@ z-index: 12;
     align-items: center;
     justify-content: center;
     text-align: center;
-    max-width: 100%;
     gap: 30px;
-    padding: 10px 20px;
-    border-radius: 10px;
-    border: 1px solid #ffffff;
-    cursor: pointer;
-    box-shadow: 0 0 5px #00baff,
-    0 0 10px #00baff,
-    0 0 20px #00baff,
-    0 0 40px #00baff,
-    0 0 80px #00baff; 
-    color: #ffffff;
-    font-size: 25px;
-    font-weight: 600;
-    transition: all 0.3s;
-    width: 800px;
-    height: 100px;
+    margin-bottom: 50px;
+	
 }
-.project {
-  fill: #ffffff;
-  transition: fill 0.3s;
-  width: 50px;
-  height: 50px;
-  filter: drop-shadow(0 0 5px #00baff)
-          drop-shadow(0 0 10px #00baff)
-          drop-shadow(0 0 20px #00baff)
-          drop-shadow(0 0 40px #00baff)
-          drop-shadow(0 0 80px #00baff);
+
+
+.active {
+   font-size: 45px;
+    font-weight: 700;
 }
 
 .projectItem:hover  {
   animation: neonRainbow 1.5s infinite alternate;
+  border-radius: 10px;
+}
+
+.typing {
+  color: #ffffff;
+  font-size: 30px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 100px;
+   
+  -webkit-animation: fadeInRotate 1s linear 6s backwards;
+	-moz-animation: fadeInRotate 1s linear 6s backwards;
+	-ms-animation: fadeInRotate 1s linear 6s backwards;
+	animation: fadeInRotate 1s linear 6s backwards;
+	-webkit-transform: scale(1) rotate(0deg);
+	-moz-transform: scale(1) rotate(0deg);
+	-o-transform: scale(1) rotate(0deg);
+	-ms-transform: scale(1) rotate(0deg);
+	transform: scale(1) rotate(0deg);
+}
+
+.tabContent {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 0.5s forwards;
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes blurFadeInOut {
+	0% {
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		-webkit-transform: scale(1.3);
+		
+	}
+	20%, 75% {
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		-webkit-transform: scale(1);
+	}
+	100% {
+		opacity: 0;
+		text-shadow: 0px 0px 50px #fff;
+		-webkit-transform: scale(0);
+	}
+}
+@-webkit-keyframes blurFadeIn {
+	0% {
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		-webkit-transform: scale(1.3);
+	}
+	50% {
+		opacity: 0.5;
+		text-shadow: 0px 0px 10px #fff;
+		-webkit-transform: scale(1.1);
+	}
+	100% {
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		-webkit-transform: scale(1);
+	}
+}
+@-webkit-keyframes fadeInBack {
+	0% {
+		opacity: 0;
+		-webkit-transform: scale(0);
+	}
+	50% {
+		opacity: 0.4;
+		-webkit-transform: scale(2);
+	}
+	100% {
+		opacity: 0.2;
+		-webkit-transform: scale(5);
+	}
+}
+@-webkit-keyframes fadeInRotate {
+	0% {
+		opacity: 0;
+		-webkit-transform: scale(0) rotate(360deg);
+	}
+	100% {
+		opacity: 1;
+		-webkit-transform: scale(1) rotate(0deg);
+	}
+}
+/**/
+
+@-moz-keyframes blurFadeInOut {
+	0% {
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		-moz-transform: scale(1.3);
+	}
+	20%, 75% {
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		-moz-transform: scale(1);
+	}
+	100% {
+		opacity: 0;
+		text-shadow: 0px 0px 50px #fff;
+		-moz-transform: scale(0);
+	}
+}
+@-moz-keyframes blurFadeIn {
+	0% {
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		-moz-transform: scale(1.3);
+	}
+	100% {
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		-moz-transform: scale(1);
+	}
+}
+@-moz-keyframes fadeInBack {
+	0% {
+		opacity: 0;
+		-moz-transform: scale(0);
+	}
+	50% {
+		opacity: 0.4;
+		-moz-transform: scale(2);
+	}
+	100% {
+		opacity: 0.2;
+		-moz-transform: scale(5);
+	}
+}
+@-moz-keyframes fadeInRotate {
+	0% {
+		opacity: 0;
+		-moz-transform: scale(0) rotate(360deg);
+	}
+	100% {
+		opacity: 1;
+		-moz-transform: scale(1) rotate(0deg);
+	}
+}
+/**/
+
+@keyframes blurFadeInOut {
+	0% {
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		transform: scale(1.3);
+	}
+	20%, 75% {
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		transform: scale(1);
+	}
+	100% {
+		opacity: 0;
+		text-shadow: 0px 0px 50px #fff;
+		transform: scale(0);
+	}
+}
+@keyframes blurFadeIn {
+	0% {
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		transform: scale(1.3);
+	}
+	50% {
+		opacity: 0.5;
+		text-shadow: 0px 0px 10px #fff;
+		transform: scale(1.1);
+	}
+	100% {
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		transform: scale(1);
+	}
+}
+@keyframes fadeInBack {
+	0% {
+		opacity: 0;
+		transform: scale(0);
+	}
+	50% {
+		opacity: 0.4;
+		transform: scale(2);
+	}
+	100% {
+		opacity: 0.2;
+		transform: scale(5);
+	}
+}
+@keyframes fadeInRotate {
+	0% {
+		opacity: 0;
+		transform: scale(0) rotate(360deg);
+	}
+	100% {
+		opacity: 1;
+		transform: scale(1) rotate(0deg);
+	}
+}
+
+
+
+@keyframes textShadowAnimation {
+  0% {
+    text-shadow: 0 0 5px #00baff, 0 0 10px #00baff, 0 0 20px #00baff, 0 0 40px #00baff, 0 0 80px #00baff;
+  }
+  50% {
+    text-shadow: 0 0 10px #00baff, 0 0 20px #00baff, 0 0 40px #00baff, 0 0 80px #00baff, 0 0 160px #00baff;
+  }
+  100% {
+    text-shadow: 0 0 5px #00baff, 0 0 10px #00baff, 0 0 20px #00baff, 0 0 40px #00baff, 0 0 80px #00baff;
+  }
 }
 
 @keyframes neonRainbow {
