--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,16 +1,29 @@
 .container {
   padding: 0 50px;
-  position: relative;
-  z-index: 0;
     margin: 0 auto;
 	overflow: hidden;
     max-width: 1440px;
     height: auto;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 
-    animation: fadein 0.5s ease-in;
+     opacity: 0;
+    transform: scale(0.5);
+    animation: portal-effect 1s forwards;
 }
-
+@keyframes portal-effect {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    50% {
+        opacity: 1;
+        transform: scale(1.5);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
 .container::-webkit-scrollbar {
     width: 0px;
 }
@@ -24,11 +37,9 @@
     background: transparent;
 }
 
-@keyframes fadein {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
+@keyframes slide-down {
+    to {
+        opacity: 1;
+        transform: translateY(0); 
+    }
 }
