--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -4,26 +4,18 @@
 	overflow: hidden;
     max-width: 1440px;
     height: auto;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 
+    0 0 5px rgba(240, 237, 237, 0.1),
+    0 0 10px rgba(240, 237, 237, 0.1),
+    0 0 20px rgba(240, 237, 237, 0.1),
+    0 0 40px rgba(240, 237, 237, 0.1),
+    0 0 80px rgba(240, 237, 237, 0.1);
 
      opacity: 0;
     transform: scale(0.5);
-    animation: portal-effect 1s forwards;
+    animation: slide-down 1s forwards;
 }
-@keyframes portal-effect {
-    0% {
-        opacity: 0;
-        transform: scale(0.5);
-    }
-    50% {
-        opacity: 1;
-        transform: scale(1.5);
-    }
-    100% {
-        opacity: 1;
-        transform: scale(1);
-    }
-}
+
 .container::-webkit-scrollbar {
     width: 0px;
 }
