--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,9 @@
 
-@keyframes glitter {
-  0% {
-    background-position: 0% 0%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 100%;
-  }
-}
-
 
 
 body {
- background: linear-gradient(45deg, #501970, #4c398b, #274ea2, #039f51, #6e9f03);
+ background: black;
             background-size: 300% 300%;
-            animation: gradientAnimation 10s ease infinite;
   font-family:'Josefin Sans Variable', sans-serif;
 color: #ffffff; 
   font-weight: 400;
@@ -38,17 +25,7 @@ body::-webkit-scrollbar-thumb:hover {
     background: transparent;
 }
 
-@keyframes gradientAnimation {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
+
 h1,
 h2,
 h3,
