--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -4,12 +4,12 @@
     flex-direction: column;
     display: flex;
     margin: auto;
-    box-shadow: 
-        0 0 5px rgba(0, 0, 0, 0.1),
-        0 0 10px rgba(0, 0, 0, 0.1),
-        0 0 20px rgba(0, 0, 0, 0.1),
-        0 0 40px rgba(0, 0, 0, 0.1),
-        0 0 80px rgba(0, 0, 0, 0.1);
+   box-shadow: 
+    0 0 5px rgba(0, 0, 0, 0.1),
+    0 0 10px rgba(0, 0, 0, 0.1),
+    0 0 20px rgba(0, 0, 0, 0.1),
+    0 0 40px rgba(0, 0, 0, 0.1),
+    0 0 80px rgba(0, 0, 0, 0.1);
    
    
 }
@@ -18,7 +18,6 @@
 
 .text {
     text-align: center;
-    
     font-size: 40px;
     font-weight: 400;
     margin-bottom: 50px;
@@ -102,7 +101,7 @@
    
 }
 .cv {
-    width: 500px;
+    max-width: 500px;
     height: auto;
     border-radius: 20px;
     cursor: pointer;
