--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,11 +10,7 @@
    height: auto;
   
 }
-.hero {
-  max-width: 1440px;
-  height: auto;
-    border-radius: 20px;
-}
+
 .wrapper {
   display: flex;
   justify-content: center;
@@ -23,7 +19,7 @@
   padding: 50px;
 }
 .photo {
-  width: 500px;
+  width: 300px;
   height: auto;
   box-shadow: 
     0 0 5px rgba(240, 237, 237, 0.1),
@@ -34,17 +30,11 @@
     border-radius: 50%;
 }
 .linkItem {
-  box-shadow: 
-    0 0 5px rgba(240, 237, 237, 0.1),
-    0 0 10px rgba(240, 237, 237, 0.1),
-    0 0 20px rgba(240, 237, 237, 0.1),
-    0 0 40px rgba(240, 237, 237, 0.1),
-    0 0 80px rgba(240, 237, 237, 0.1);
-     border-radius: 20px;
+  border: 3px solid rgba(240, 237, 237, 0.1);
+    
 }
 .headerItem {
-   padding: 26px;
-   border-radius: 50%;
+   padding: 36px;
   display: flex; 
   color: #ffffff;
   align-items: center;
@@ -52,27 +42,24 @@
   cursor: pointer;
     font-size: 25px;
 font-weight: 700;
-transform: translateY(20px);
-  animation: fadeInUp 0.5s forwards;
 }
 
-@keyframes fadeInUp {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+
 .active  {
     font-size: 45px;
-    transform: scale(1.2);
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+    box-shadow: 
+    0 0 5px rgba(240, 237, 237, 0.1),
+    0 0 10px rgba(240, 237, 237, 0.1),
+    0 0 20px rgba(240, 237, 237, 0.1),
+    0 0 40px rgba(240, 237, 237, 0.1),
+    0 0 80px rgba(240, 237, 237, 0.1);
 }
   
 .headerList {
 
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 70px;
     align-items: center;
     border-radius: 10px;
     padding: 10px 20px;
