--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -15,22 +15,25 @@
 }
 
 
-
+        @keyframes slide-up {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 .text {
     text-align: center;
     font-size: 40px;
     font-weight: 400;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
     color: #ffffff;
+     opacity: 0;
+    transform: translateY(100px);
+    animation: slide-up 1s 1s forwards;
     }
 
     
 
-.foto {
-    width: 500px;
-    height: auto;
-    border-radius: 20px;
-    }
 .container {
     display: flex;
     align-items: center;
@@ -47,6 +50,9 @@
     font-weight: 600;
     margin-bottom: 50px;
     color: #ffffff;
+    opacity: 0;
+    transform: translateY(100px);
+    animation: slide-up 1s 1s forwards;
 }
 .list {
     display: flex;
@@ -58,7 +64,9 @@
     margin: 30px 0;
    padding: 0 80px;
    margin-bottom: 80px;
-  
+  opacity: 0;
+    transform: translateY(100px);
+    animation: slide-up 1s 1s forwards;
 }
 .item {
     width: 150px;
@@ -89,6 +97,9 @@
     padding: 30px;
     margin-bottom: 50px;
     width: auto;
+    opacity: 0;
+    transform: translateY(100px);
+    animation: slide-up 1s 2s forwards;
 }
 .education {
     display: flex;
