--- a/src/pages/CamperClubPage/CamperClubPage.module.css
+++ b/src/pages/CamperClubPage/CamperClubPage.module.css
@@ -5,25 +5,46 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
-   opacity: 0;
-    transform: scale(0.5);
-    animation: portal-effect 1s forwards;
+  opacity: 0;
+  transform: translateY(100px);
+  animation: slideInFromLeft 0.5s forwards;
     
 }
-@keyframes portal-effect {
-    0% {
-        opacity: 0;
-        transform: scale(0.5);
-    }
-    50% {
-        opacity: 1;
-        transform: scale(1.2);
-    }
-    100% {
-        opacity: 1;
-        transform: scale(1);
-    }
+
+.wrapperRight {
+    height: auto;
+    padding: 50px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+  opacity: 0;
+  transform: translateY(100px);
+  animation: slideInFromRight 0.5s forwards;
+    
 }
+
+@keyframes slideInFromRight {
+            0% {
+                transform: translateX(100%);
+                opacity: 0;
+            }
+            100% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
+
+@keyframes slideInFromLeft {
+            0% {
+                transform: translateX(-100%);
+                opacity: 0;
+            }
+            100% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
 .title {
     text-align: center;
     font-size: 40px;
@@ -43,12 +64,7 @@
     height: auto;
     border-radius: 8px;
 }
-.repoLinkIcon {
- width: 50px;
-  height: 50px;
-  fill: #ffffff;
-  stroke: #00baff;
-}
+
 .linksWrapper {
     display: flex;
     gap: 50px;
@@ -57,6 +73,23 @@
     margin: 50px 0px;
 
 }
+.linksItem {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    text-align: center;
+     
+  }
+.repoLinkIcon {
+ width: 50px;
+  height: 50px;
+  fill: #ffffff;
+  stroke: #00baff;
+}
+
+
+
+
 .links {
     font-size: 35px;
      padding: 8px 16px;
@@ -67,16 +100,26 @@
 .links:hover,
   .links:focus {
     color: #00baff; 
-    
+    animation: left-edge 0.5s linear 1;
   }
 
+ 
+@keyframes left-edge {
+	0% {
+		transform: rotate(0deg);
+	}
+	35% {
+		transform: rotate(-25deg);
+	}
+	75% {
+		transform: rotate(25deg);
+	}
+	100% {
+		transform: rotate(0deg);
+	}
+}
+
   
-  .linksItem {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    text-align: center;
-  }
   .descriptionTitle {
     font-size: 35px;
     margin-bottom: 20px;
@@ -133,50 +176,5 @@
   border-radius: 8px;
 }
 
-.button:before {
-    content: '';
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
-    position: absolute;
-    top: -2px;
-    left:-2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(5px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
-    opacity: 0;
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
-}
 
-.button:active {
-    color: #000
-}
-
-.button:active:after {
-    background: transparent;
-}
-
-.button:hover:before {
-    opacity: 1;
-}
-
-.button:after {
-    z-index: -1;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #111;
-    left: 0;
-    top: 0;
-    border-radius: 10px;
-}
-
-@keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
-}
 
