--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,7 +1,9 @@
 .container {
+    /* background-image: url('./../../assets/backgr2.jpg');
+    background-size: 100% 100%; */
   padding: 0 50px;
     margin: 0 auto;
-	overflow: hidden;
+	/* overflow: hidden; */
     max-width: 1440px;
     height: auto;
     box-shadow: 
