--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,65 +2,61 @@
 
 .header {
     align-items: center;
-   justify-content: center;
+   justify-content: flex-end;
     display: flex;
-    flex-direction: column;
-    padding: 50px;
-    max-width: 1440px;
-   height: auto;
-  
+    padding: 20px;
+    max-width: 1340px;
+  position: sticky;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.858);
+    margin: 0 auto;
 }
 
-.wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 100px;
-  padding: 50px;
-}
-.photo {
-  width: 300px;
-  height: auto;
-  box-shadow: 
-    0 0 5px rgba(240, 237, 237, 0.1),
-    0 0 10px rgba(240, 237, 237, 0.1),
-    0 0 20px rgba(240, 237, 237, 0.1),
-    0 0 40px rgba(240, 237, 237, 0.1),
-    0 0 80px rgba(240, 237, 237, 0.1);
-    border-radius: 50%;
-}
-.linkItem {
-  border: 3px solid rgba(240, 237, 237, 0.1);
-    
-}
+
 .headerItem {
-   padding: 36px;
+   padding: 16px;
   display: flex; 
   color: #ffffff;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-end;
+  justify-content: flex-end;
   cursor: pointer;
-    font-size: 25px;
-font-weight: 700;
+    font-size: 15px;
+font-weight: 400;
+position: relative;
+}
+.headerItem::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 3px; 
+  width: 100%;
+  height: 2px; 
+  background-color: #ffffff;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+  transform-origin: left;
 }
 
 
-.active  {
-    font-size: 45px;
-    box-shadow: 
+.headerItem.active::after, .headerItem:hover::after {
+  transform: scaleX(1);
+}
+
+
+  
+.headerList {
+border: 1px solid #ffffff;
+box-shadow: 
     0 0 5px rgba(240, 237, 237, 0.1),
     0 0 10px rgba(240, 237, 237, 0.1),
     0 0 20px rgba(240, 237, 237, 0.1),
     0 0 40px rgba(240, 237, 237, 0.1),
     0 0 80px rgba(240, 237, 237, 0.1);
-}
-  
-.headerList {
-
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     gap: 70px;
-    align-items: center;
     border-radius: 10px;
     padding: 10px 20px;
     
