--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -1,3 +1,5 @@
+
+
 .wrapper {
     align-items: center;
     justify-content: center;
@@ -10,7 +12,7 @@
     0 0 20px rgba(0, 0, 0, 0.1),
     0 0 40px rgba(0, 0, 0, 0.1),
     0 0 80px rgba(0, 0, 0, 0.1);
-   
+   overflow: hidden;
    
 }
 
@@ -23,10 +25,11 @@
 }
 .text {
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 400;
-    margin-bottom: 100px;
+    margin: 100px 0px;
     color: #ffffff;
+    width: 700px;
      opacity: 0;
     transform: translateY(100px);
     animation: slide-up 1s 1s forwards;
@@ -39,9 +42,8 @@
     align-items: center;
     justify-content: center;
     gap: 100px;
-    padding: 50px;
+    padding: 0px 50px;
     margin-bottom: 50px;
-    margin-top: 80px;
     
 }
 .title {
@@ -68,9 +70,34 @@
     transform: translateY(100px);
     animation: slide-up 1s 1s forwards;
 }
+.photo {
+  width: 350px;
+  height: auto;
+  box-shadow: 
+    0 0 5px rgba(240, 237, 237, 0.1),
+    0 0 10px rgba(240, 237, 237, 0.1),
+    0 0 20px rgba(240, 237, 237, 0.1),
+    0 0 40px rgba(240, 237, 237, 0.1),
+    0 0 80px rgba(240, 237, 237, 0.1);
+    border-radius: 50%;
+    position: sticky;
+    z-index: 12;
+    animation: grow 2s ease-in-out forwards;
+}
+
+@keyframes grow {
+  from {
+    width: 0;
+    opacity: 0; 
+  }
+  to {
+    width: 350px; 
+    opacity: 1;
+  }
+}
 .item {
-    width: 150px;
-    height: 150px;
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
     background-color: #ffffff;
     display: flex;
@@ -79,13 +106,13 @@
 }
 .iconItem {
     fill: #00baff;
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
 }
     
 .icon {
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
     
 }
 
@@ -112,7 +139,7 @@
    
 }
 .cv {
-    max-width: 500px;
+   width: 300px;
     height: auto;
     border-radius: 20px;
     cursor: pointer;
