--- a/src/components/Header/Footer/Footer.module.css
+++ b/src/components/Header/Footer/Footer.module.css
@@ -1,14 +1,14 @@
 .footer {
 display: flex;
-padding: 50px;
+padding: 10px;
 justify-content: center;
 align-items: center;
 font-size: 30px;
  position: relative;
  z-index: 12;
   gap: 80px;
-  max-width: 1440px;
-height: 170px;
+ width: auto;
+height: auto;
 }
 
 
@@ -16,7 +16,7 @@ height: 170px;
     display: flex;
     gap: 30px;
     list-style: none;
-    margin: 30px 0;
+    margin: 10px 0;
 }
 .title {
     color: #ffffff;
