--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -91,6 +91,7 @@
   }
 }
 .item {
+  border: 1px solid rgba(240, 237, 237, 0.1);
   padding: 10px 20px;
   border-radius: 20px;
   background: linear-gradient(90deg, #000000, #1e1e1e);
